<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:orientation="vertical"
    tools:context="obu.ckt.cricket.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:padding="@dimen/_35sdp"
            android:src="@mipmap/ic_logo" />

        <ImageView
            android:id="@+id/iv_back_sign_up"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_back" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name_sing_up"
            style="@style/login_edt"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:maxLength="30" />

        <EditText
            android:id="@+id/et_email_sing_up"
            style="@style/login_edt"
            android:layout_marginTop="@dimen/_15sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password_sing_up"
            style="@style/login_edt"
            android:layout_marginTop="@dimen/_15sdp"
            android:hint="@string/password"
            android:inputType="textWebPassword" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_sing_up"
            style="@style/login_edt"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/btnColor"
            android:elevation="@dimen/_5sdp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:elevation="@dimen/_5sdp" />


    </LinearLayout>

</LinearLayout>
